<resources>
    <string name="app_name">Previa Al Paso</string>
    \
    <string name="title_splash_activity">Splash Activity</string>

    <!-- Fragment Agreement -->
    <string name="agreement_actionbar_title">Acuerdo</string>
    <string name="agreement_title">Soy mayor de 18 años</string>
    <string name="agreement_explanation">Debes confirmar que\nsos mayor de edad para poder\nutilizar esta aplicación.</string>
    <string name="agreement_agreement">Si, soy mayor de 18 años</string>
    <string name="agreement_positive_button">ACEPTAR</string>

    <!-- Fragment Log In -->
    <string name="login_actionbar_title">Iniciar Sesión</string>
    <string name="login_facebook_button">INICIAR SESION CON FACEBOOK</string>
    <string name="login_google_button">INICIAR SESION CON GOOGLE</string>
    <string name="login_explanation">ó</string>
    <string name="login_email_hint">correo electrónico</string>
    <string name="login_password_hint">contraseña</string>
    <string name="login_login_button">INICIAR SESION</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>

    <string name="null_string" />
</resources>